# applifting

./: README.md  env.example  pyproject.toml  settings.py
applifting/: urls.py
applifting/offer/: api.py  models.py  urls.py  views.py
applifting/offer/migrations/: 0002_apitoken.py  0003_alter_offer_product.py  0004_alter_offer_items_in_stock.py  0005_alter_offer_id.py
applifting/offer/tests/: factory.py  tests.py
applifting/product/: apps.py  serializers.py  views.py
applifting/product/migrations/: 0001_initial.py  0002_alter_product_id.py
applifting/product/tests/: tests.py
offer/: apps.py  schedules.py  serializers.py
offer/migrations/: 0001_initial.py
product/: models.py  urls.py
product/tests/: factory.py
scheduler/: scheduler.py
scheduler/management/commands/: qmigrate.py
