[tool.poetry]
name = "applifting"
version = "0.1.0"
description = ""
authors = ["Petr Sebik <sebikpetr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
drf-yasg = "^1.21.5"
psycopg2 = "^2.9.6"
django-q = "^1.3.9"
croniter = "^1.3.14"
pyjwt = "^2.6.0"
python-dotenv = "^1.0.0"
factory-boy = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
